fixed spacing in sign up form

--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -34,7 +34,8 @@ form {
 }
 
 input {
-    margin-top: 15px;
+    margin-top: 15px !important;
+    border-radius: 7px;
     height: 40px;
     width: 400px;
     font-size: 20px;
@@ -75,14 +76,16 @@ button {
 
   .vertical-divider {
     content: '';
-    width: 5px; /* Adjust the width as needed */
+    width: 5px;
     background-color: white;
-    height: 60%; /* Make the line as tall as the container */
+    height: 60%;
     position: absolute;
     top: 100px;
     bottom: 0;
     margin: auto;
-    left: 50%; /* Position it in the center */
-    transform: translateX(-50%); /* Center it horizontally */
+    left: 50%;
+    transform: translateX(-50%);
     border-radius: 7px;
 }
+
+
